@@ -1190,7 +1190,7 @@ PRIVATE FUNC(abool, parse_sap_header, (
 		module_info _ type = ASAP_TYPE_SAP_C;
 		break;
 	case CHARCODE('D'):
-		if (module_info _ player < 0 || module_info _ init < 0)
+		if (module_info _ init < 0)
 			return FALSE;
 		module_info _ type = ASAP_TYPE_SAP_D;
 		break;
@@ -1476,11 +1476,11 @@ FUNC(void, ASAP_MutePokeyChannels, (P(ASAP_State PTR, ast), P(int, mask)))
 
 FUNC(abool, call_6502_player, (P(ASAP_State PTR, ast)))
 {
-	V(int, s);
+	V(int, player) = ast _ module_info.player;
 	PokeySound_StartFrame(ast);
 	switch (ast _ module_info.type) {
 	case ASAP_TYPE_SAP_B:
-		call_6502(ast, ast _ module_info.player, ast _ module_info.fastplay);
+		call_6502(ast, player, ast _ module_info.fastplay);
 		break;
 	case ASAP_TYPE_SAP_C:
 #ifndef ASAP_ONLY_SAP
@@ -1489,31 +1489,33 @@ FUNC(abool, call_6502_player, (P(ASAP_State PTR, ast)))
 	case ASAP_TYPE_CMR:
 	case ASAP_TYPE_CMS:
 #endif
-		call_6502(ast, ast _ module_info.player + 6, ast _ module_info.fastplay);
+		call_6502(ast, player + 6, ast _ module_info.fastplay);
 		break;
 	case ASAP_TYPE_SAP_D:
-		s = ast _ cpu_s;
+		if (player >= 0) {
+			V(int, s)= ast _ cpu_s;
 #define PUSH_ON_6502_STACK(x)  dPutByte(0x100 + s, x); s = (s - 1) & 0xff
 #define RETURN_FROM_PLAYER_ADDR  0xd200
-		/* save 6502 state on 6502 stack */
-		PUSH_ON_6502_STACK(ast _ cpu_pc >> 8);
-		PUSH_ON_6502_STACK(ast _ cpu_pc & 0xff);
-		PUSH_ON_6502_STACK(((ast _ cpu_nz | (ast _ cpu_nz >> 1)) & 0x80) + ast _ cpu_vdi + \
-			((ast _ cpu_nz & 0xff) == 0 ? Z_FLAG : 0) + ast _ cpu_c + 0x20);
-		PUSH_ON_6502_STACK(ast _ cpu_a);
-		PUSH_ON_6502_STACK(ast _ cpu_x);
-		PUSH_ON_6502_STACK(ast _ cpu_y);
-		/* RTS will jump to 6502 code that restores the state */
-		PUSH_ON_6502_STACK((RETURN_FROM_PLAYER_ADDR - 1) >> 8);
-		PUSH_ON_6502_STACK((RETURN_FROM_PLAYER_ADDR - 1) & 0xff);
-		ast _ cpu_s = s;
-		dPutByte(RETURN_FROM_PLAYER_ADDR, 0x68);     /* PLA */
-		dPutByte(RETURN_FROM_PLAYER_ADDR + 1, 0xa8); /* TAY */
-		dPutByte(RETURN_FROM_PLAYER_ADDR + 2, 0x68); /* PLA */
-		dPutByte(RETURN_FROM_PLAYER_ADDR + 3, 0xaa); /* TAX */
-		dPutByte(RETURN_FROM_PLAYER_ADDR + 4, 0x68); /* PLA */
-		dPutByte(RETURN_FROM_PLAYER_ADDR + 5, 0x40); /* RTI */
-		ast _ cpu_pc = ast _ module_info.player;
+			/* save 6502 state on 6502 stack */
+			PUSH_ON_6502_STACK(ast _ cpu_pc >> 8);
+			PUSH_ON_6502_STACK(ast _ cpu_pc & 0xff);
+			PUSH_ON_6502_STACK(((ast _ cpu_nz | (ast _ cpu_nz >> 1)) & 0x80) + ast _ cpu_vdi + \
+				((ast _ cpu_nz & 0xff) == 0 ? Z_FLAG : 0) + ast _ cpu_c + 0x20);
+			PUSH_ON_6502_STACK(ast _ cpu_a);
+			PUSH_ON_6502_STACK(ast _ cpu_x);
+			PUSH_ON_6502_STACK(ast _ cpu_y);
+			/* RTS will jump to 6502 code that restores the state */
+			PUSH_ON_6502_STACK((RETURN_FROM_PLAYER_ADDR - 1) >> 8);
+			PUSH_ON_6502_STACK((RETURN_FROM_PLAYER_ADDR - 1) & 0xff);
+			ast _ cpu_s = s;
+			dPutByte(RETURN_FROM_PLAYER_ADDR, 0x68);     /* PLA */
+			dPutByte(RETURN_FROM_PLAYER_ADDR + 1, 0xa8); /* TAY */
+			dPutByte(RETURN_FROM_PLAYER_ADDR + 2, 0x68); /* PLA */
+			dPutByte(RETURN_FROM_PLAYER_ADDR + 3, 0xaa); /* TAX */
+			dPutByte(RETURN_FROM_PLAYER_ADDR + 4, 0x68); /* PLA */
+			dPutByte(RETURN_FROM_PLAYER_ADDR + 5, 0x40); /* RTI */
+			ast _ cpu_pc = player;
+		}
 		Cpu_RunScanlines(ast, ast _ module_info.fastplay);
 		break;
 	case ASAP_TYPE_SAP_S:
@@ -1527,20 +1529,20 @@ FUNC(abool, call_6502_player, (P(ASAP_State PTR, ast)))
 		break;
 #ifndef ASAP_ONLY_SAP
 	case ASAP_TYPE_DLT:
-		call_6502(ast, ast _ module_info.player + 0x103, ast _ module_info.fastplay);
+		call_6502(ast, player + 0x103, ast _ module_info.fastplay);
 		break;
 	case ASAP_TYPE_MPT:
 	case ASAP_TYPE_RMT:
 	case ASAP_TYPE_TM2:
-		call_6502(ast, ast _ module_info.player + 3, ast _ module_info.fastplay);
+		call_6502(ast, player + 3, ast _ module_info.fastplay);
 		break;
 	case ASAP_TYPE_TMC:
 		if (--ast _ tmc_per_frame_counter <= 0) {
 			ast _ tmc_per_frame_counter = ast _ tmc_per_frame;
-			call_6502(ast, ast _ module_info.player + 3, ast _ module_info.fastplay);
+			call_6502(ast, player + 3, ast _ module_info.fastplay);
 		}
 		else
-			call_6502(ast, ast _ module_info.player + 6, ast _ module_info.fastplay);
+			call_6502(ast, player + 6, ast _ module_info.fastplay);
 		break;
 #endif
 	}
